--- a/domain.yml
+++ b/domain.yml
@@ -6,7 +6,9 @@ intents:
   - mood_great
   - mood_unhappy
   - admin_timing
-
+  - festember_events
+  - orion_locations
+  - lhc_locations
 actions:
 - utter_greet
 - utter_cheer_up
@@ -14,6 +16,9 @@ actions:
 - utter_happy
 - utter_goodbye
 - utter_at
+- utter_fe
+- utter_ol
+- utter_lhcl
 
 templates:
   utter_greet:
@@ -34,3 +39,13 @@ templates:
 
   utter_at:
   - text: "The admin office working time is 9am to 5 pm in week days"
+
+  utter_fe:
+  - link: "https://schedule.festember.com/"
+
+  utter_ol:
+  - link: "https://goo.gl/maps/inDZPkSAngTcLxzr5"
+
+  utter_lhcl:
+  - html: "<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d411.26031335828014!2d78.81359584641547!3d10.760808688278452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baa8d38c81b8ddd%3A0xdfed267bcdd1b339!2sLecture%20Hall%20Complex!5e0!3m2!1sen!2sin!4v1581190899830!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>"
+
